resources/private/common-html/sass/views/_side_panel.scss
#side-panel-overlay {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: 2000;
}

#side-panel-overlay.show-side-panel {
  bottom: 100%;
  right: 100%;
}

#side-panel-template {
  margin: 0;
  padding: 0;
}

#side-panel {
  z-index: 2001;
  color: #fff;
  position: fixed;
  right: -500px;
  top: 60px;
  bottom: 0px;

  .comment-controls {
    margin-left: 0;
    .mark-answered {
      margin-left: 0;
    }
  }
  .buttons {
    float: left;
    margin-top: $marginM;
    .btn-conversation, .btn-notice {
      box-shadow: 1px 1px 3px darken($lp-dark-grey, 10%);
      padding: 1em;
      display: block;
      font-weight: bold;
      margin: 0 0 $marginM 0;

      .unseen-comments {
        @include spite-bg;
        background-position: 1px -5396px;
        width: $lupicon-size;
        height: 30px;
        padding-top: 3px;
        color: $color-text;
        text-shadow: none;
      }
    }

    .btn-conversation.active, .btn-notice.active {
      background-color: $orange-hover;
    }
  }

  .content-wrapper {
    float: left;
    height: 100%;
    background:  fade-out($lp-dark-grey, 0.1);
    background: $lp-dark-grey \9; /* IE 8 and below */
    padding: $marginS;
    width: 500px;
  }

  .header {
    @include disable-select;
    cursor: default;
    h1 {
      line-height: 30px;
      overflow: auto;
      clear: both;
    }
    .title {
      float: left;
    }
    .close-btn {
      @include spite-bg;
      width: 16px;
      height: 16px;
      background-position: 0px -2700px;
      cursor: pointer;
      position: absolute;
      top: $marginS;
      right: $marginS;
    }
    .help {
      margin-left: $marginM;
      float: left;
      &:after {
        border-bottom-color: lighten($lp-dark-grey, 15%);
      }
    }
    .icon.help.expanded {
      margin-bottom: 22px;
    }
  }

  .content {
    overflow: auto;
    height: 100%;

    .form-input.textarea {
      width: 100%;
      box-sizing: border-box;
    }

  }

  .content-table {
    overflow: auto;
    height: 100%;
    width: 100%;
    display: table;

    .form-input.textarea {
      width: 100%;
      box-sizing: border-box;
    }

    .content-row {
      display: table-row;
    }

    .content-cell {
      display: table-cell;
      padding-bottom: $marginS;
      position: relative;
    }
  }

  .content.expanded, .content-table.expanded {
    top: 200px;
  }

  .panel-info {
    background: lighten($lp-dark-grey, 15%);
    padding: $marginS;
    clear: both;
  }

  h1 {
    color: #fff;
  }

  .comment {
    color: $grey-text;
  }

  #notice-template {
    height: 100%;
  }

  #notice-panel {
    height: 100%;

    .notice-component {
      height: 100%;
    }

    .application-urgency {
      width: 215px;
      position: relative;
    }

    .application-tags {
      z-index: 1;
      position: relative;
    }

    .icon.urgent {
      margin-top: 10px;
      vertical-align: middle;
    }

    .icon.hold {
      margin-top: 10px;
      vertical-align: middle;
    }

    label {
      vertical-align: bottom;
    }

    .form-grid {
      display: table;
      height: 100%;
      .row {
        display: table-row;
        margin-bottom: $marginS;
        .col-1 {
          display: table-cell;
          margin-bottom: $grid-margin;
          label {
            color: #fff;
          }
        }
      }
      .row.textarea-wrapper {
        height: 100%;
        .col--vertical {
          height: 100%;
          padding-bottom: 60px;
        }
        .col-1 {
          height: 100%;
          textarea {
            height: 100%;
            height: 300px\9;
            box-sizing: border-box;
          }
        }
      }
    }
  }
}

#side-panel.show-side-panel {
  right: 0px;
  bottom: 0;
}

#conversation-panel {
  height: 100%;
  textarea {
    -webkit-transition: box-shadow 250ms ease;
    -moz-transition: box-shadow 250ms ease;
    -ms-transition: box-shadow 250ms ease;
    -o-transition: box-shadow 250ms ease;
    transition: box-shadow 250ms ease;
  }
  padding-bottom: 46px;
  .header {
    h1 {
      margin-bottom: 0;
    }
  }
  .highlight-conversation {
    textarea {
      box-shadow: inset 0 0 10px darken($lp-orange, 10%);
      border-color: $lp-orange;
    }
  }
  label {
    color: #fff;
  }
}

#side-panel .message-buttons {
  button {
    margin-bottom: $marginS;
  }
}

@media all and (max-width: $narrow-breakpoint) {
  #side-panel {
    .content-wrapper {
      width: 400px;
    }
    .btn-title {
      display: none;
    }
  }

  #side-panel {
    right: -400px;
  }

  .comment-controls {
    .comment-request {
      margin-left: 0;
    }
  }
  #side-panel .message-buttons {
    @include stacked;
    button {
      margin-bottom: $marginS;
    }
  }
}

